[gd_scene load_steps=11 format=2]

[ext_resource path="res://Recursos/pinguinos/PinguinoFrente/animtestNaranjaTiro.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Personaje.gd" type="Script" id=2]

[sub_resource type="CapsuleShape2D" id=1]
radius = 19.4199
height = 58.7481

[sub_resource type="Animation" id=2]
resource_name = "Caer"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 24, 25, 26, 27, 28, 27, 26, 26, 25, 25 ]
}

[sub_resource type="Animation" id=3]
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}

[sub_resource type="Animation" id=4]
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 8, 9, 10, 11 ]
}

[sub_resource type="Animation" id=5]
resource_name = "Tirar"
length = 0.3
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.1, 0.15, 0.2, 0.25 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 47, 48, 49, 50, 51, 52 ]
}

[sub_resource type="Animation" id=6]
resource_name = "cargarTiro"
length = 0.3
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.1, 0.15, 0.2, 0.25 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 42, 41, 40, 45, 46, 47 ]
}

[sub_resource type="Animation" id=7]
length = 0.4
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.1, 0.15, 0.2, 0.25, 0.3, 0.35 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 32, 33, 34, 35, 36, 37, 38, 39 ]
}

[sub_resource type="Animation" id=8]
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.1, 0.15, 0.2, 0.25, 0.3, 0.35 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 16, 17, 18, 19, 20, 21, 22, 23 ]
}

[node name="Player" type="KinematicBody2D" groups=[
"pinguino",
]]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 0.22, 0.232878 )
texture = ExtResource( 1 )
vframes = 7
hframes = 8
frame = 24

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 4.28234, 2.34833 )
rotation = 0.0585357
shape = SubResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Caer = SubResource( 2 )
"anims/Nueva Animaci√≥n" = SubResource( 3 )
anims/Parado = SubResource( 4 )
anims/Tirar = SubResource( 5 )
anims/cargarTiro = SubResource( 6 )
anims/sacarBazuca = SubResource( 7 )
anims/sacarEscopeta = SubResource( 8 )

[node name="Pos_Bala" type="Position2D" parent="."]
position = Vector2( 51.4564, -16.172 )

[node name="explosion_cooldown" type="Timer" parent="."]
wait_time = 1.024

[node name="Trayectoria" type="Node2D" parent="."]
position = Vector2( 51.4564, -16.172 )

[node name="Pos_Bomba" type="Position2D" parent="."]
position = Vector2( -34.2505, -71.5206 )

[node name="CamaraPinguino" type="Camera2D" parent="." groups=[
"camara",
]]
limit_left = 0
limit_top = 0
limit_right = 6450
limit_bottom = 725

[node name="Timer" type="Timer" parent="."]
[connection signal="timeout" from="explosion_cooldown" to="." method="_on_explosion_cooldown_timeout"]
